[FIXED] resolve the conflict

--- a/packages/sdlc/app/Native/signin/i18n/en.yaml
+++ b/packages/sdlc/app/Native/signin/i18n/en.yaml
@@ -1,4 +1,7 @@
-workbench:
+signin:
   title: 'Security Development Life Control'
-  lang: 'Language'
-  signout: 'SignOut'
+  username: 'Username'
+  password: 'Password'
+  submit: 'SignIn'
+  footer: 'Or-Change'
+  language: 'Change Language'
