--- a/packages/sdlc/app/Native/signin/i18n/zh.yaml
+++ b/packages/sdlc/app/Native/signin/i18n/zh.yaml
@@ -1,4 +1,8 @@
-workbench:
-  title: 'SDLC安全开发管控平台'
-  lang: '语言'
-  signout: '退出'
+signin:
+  title: 'SDLC 安全开发管控平台'
+  username: '用户名'
+  password: '密码'
+  submit: '登录'
+  footer: '天津橙子科技有限公司'
+  language: '切换语言'
+  
