[FIXED] i18n and icon

--- a/packages/sdlc/app/Native/items/account/i18n/en.yaml
+++ b/packages/sdlc/app/Native/items/account/i18n/en.yaml
@@ -1,2 +1,11 @@
 accountItem:
   profile: 'Profile'
+
+profile:
+  breadAccount: 'Account'
+  breadProfile: 'Profile'
+  username: 'Username'
+  administrator: 'Administrator'
+  update: 'Update'
+  adminYes: 'Yes'
+  adminNo: 'No'
