--- a/packages/sdlc/app/Native/projectList/i18n/en.yaml
+++ b/packages/sdlc/app/Native/projectList/i18n/en.yaml
@@ -4,9 +4,18 @@ projectAll:
   owned: 'Owned'
   joined: 'Joined'
   newProject:
-    title: 'New Project'
+    title: 'Create Project'
     name: 'Name'
-    language: 'Language'
     abstract: 'Abstract'
     submit: 'Create'
     close: 'Close'
+    success: 'Created successfully'
+    failed: 'Created failed'
+  projectList:
+    name: 'Name'
+    owner: 'Owner'
+    createAt: 'CreateAt'
+    action: 'Action'
+    delete: 'Delete'
+    success: 'Deleted successfully'
+    failed: 'Deleted failed'
